# tide-disco

./: .gitignore  Cargo.toml  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: build.yml  build_windows.yml  coverage.yml
api/: api.toml
config/: app.toml
examples/hello-world/: api.toml  main.rs
examples/versions/: main.rs  v1.toml  v2.toml
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
implementors/clap_builder/derive/: trait.Args.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/futures_core/stream/: trait.Stream.js
implementors/futures_sink/: trait.Sink.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/snafu/: trait.ErrorCompat.js
implementors/std/error/: trait.Error.js
implementors/tide_disco/error/: trait.Error.js
public/media/css/: style.css
search.desc/tide_disco/: tide_disco-desc-0-.js
search.index/: 03fc0ff5d275.js  0426cbffe0a6.js  057be98ce0b5.js  0a640f3cbd5d.js  0ce71d74cb23.js  0e76ee36742f.js  1132742f1d24.js  12310024711b.js  14065d11287c.js  16ed8b046b53.js  1b8956f7028f.js  1dd1ce81944b.js  1ff53fd9e0d9.js  1ffd291c25af.js  22483e7e8f03.js  2302bbe45c80.js  23afe10d14cd.js  283da98fb858.js  2ded17cc0192.js  2e2faab8db38.js  2e7494d4487e.js  3023a6ff2367.js  3076826be18e.js  3104a60acebb.js  31f90fa6a49d.js  327448a679bc.js  338901e868c2.js  35bc73dc0e9f.js  38e93945671a.js  3ab9d4459314.js  3c31d86c7bda.js  3d67aa4eebe4.js  404dd21b2a95.js  40df7dd8ea62.js  43c6983d4c36.js  4837bfcf66d7.js  49a77b6bb6ab.js  4bc16827f616.js  4bc2aaea2799.js  4e131bdda16f.js  (+33 more)
search.index/crateNames/: 3a40bc6a19ae.js
search.index/desc/: 25f9383c7f7a.js
search.index/entry/: 593981f785f4.js
search.index/function/: c42248ce7c1e.js
search.index/generic_inverted_index/: 51bdaf1e9add.js
search.index/name/: 22b8b74c2792.js
search.index/normalizedName/: d6d1dd3d6128.js
search.index/path/: 5b82177efca4.js
search.index/type/: b34d7728db21.js
src/: api.rs  app.rs  dispatch.rs  error.rs  healthcheck.rs  lib.rs  listener.rs  main.rs  method.rs  metrics.rs  middleware.rs  request.rs  route.rs  signal.rs  socket.rs  status.rs  testing.rs
src/tide_disco/: api.rs.html  app.rs.html  dispatch.rs.html  error.rs.html  healthcheck.rs.html  lib.rs.html  listener.rs.html  method.rs.html  metrics.rs.html  middleware.rs.html  request.rs.html  route.rs.html  socket.rs.html  status.rs.html  testing.rs.html
tide_disco/: all.html  constant.SERVER_STARTUP_RETRIES.html  constant.SERVER_STARTUP_SLEEP_MS.html  enum.DiscoKey.html  enum.HealthStatus.html  enum.StatusCode.html  enum.UrlSegment.html  fn.app_api_path.html  fn.check_api.html  fn.check_literals.html  fn.compose_config_path.html  fn.compose_reference_documentation.html  fn.compose_settings.html  fn.configure_router.html  fn.disco_dispatch.html  fn.disco_web_handler.html  fn.document_route.html  fn.get_api_path.html  fn.healthcheck.html  fn.init_logging.html  fn.init_web_server.html  fn.load_api.html  fn.org_data_path.html  fn.parse_parameters.html  fn.wait_for_server.html  index.html  macro.join.html  sidebar-items.js  struct.DiscoArgs.html  struct.ServerState.html  struct.Url.html  type.AppServerState.html  type.AppState.html  type.Html.html
tide_disco/api/: enum.ApiError.html  index.html  sidebar-items.js  struct.Api.html  struct.ApiMetadata.html  struct.ApiVersion.html  struct.RoutesWithPath.html
tide_disco/app/: enum.AppError.html  index.html  sidebar-items.js  struct.App.html  struct.AppHealth.html  struct.AppVersion.html  struct.Module.html  trait.Listener.html  trait.ToListener.html
tide_disco/error/: index.html  sidebar-items.js  struct.ServerError.html  trait.Error.html
tide_disco/healthcheck/: enum.HealthStatus.html  index.html  sidebar-items.js  trait.HealthCheck.html
tide_disco/listener/: index.html  sidebar-items.js  struct.RateLimitListener.html
tide_disco/method/: enum.Method.html  index.html  sidebar-items.js  struct.ParseMethodError.html  trait.ReadState.html  trait.WriteState.html
tide_disco/metrics/: index.html  trait.Metrics.html
tide_disco/request/: enum.RequestError.html  enum.RequestParamType.html  enum.RequestParamValue.html  index.html  sidebar-items.js  struct.RequestParam.html  struct.RequestParams.html
tide_disco/route/: enum.RouteError.html  enum.RouteParseError.html  index.html  sidebar-items.js  struct.MapErr.html  struct.Route.html
tide_disco/socket/: enum.SocketError.html  index.html  sidebar-items.js  struct.Connection.html
tide_disco/status/: enum.StatusCode.html  index.html  sidebar-items.js  struct.OutOfRangeError.html  struct.StatusCode.html
tide_disco/testing/: fn.setup_test.html  fn.test_ws_client.html  fn.test_ws_client_with_headers.html  index.html  sidebar-items.js  struct.Client.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.FromArgMatches.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.AsRef.js  trait.From.js  trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/futures_sink/: trait.Sink.js
trait.impl/snafu/: trait.ErrorCompat.js
type.impl/maud/: type.Markup.js
type.impl/tide_disco/: struct.ServerState.js
(+37 files in other folders)
