[package]
name = "tide-disco"
version = "0.4.1"
edition = "2021"
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Discoverability for Tide"
repository = "https://github.com/EspressoSystems/tide-disco"
license-file = "LICENSE"

[[example]]
name = "hello-world"
test = true

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.51"
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13.1"
derive_more = "0.99"
dirs = "5.0.1"
edit-distance = "2.1.0"
futures = "0.3.21"
futures-util = "0.3.8"
http = "0.2.7"
include_dir = "0.7"
lazy_static = "1.4.0"
libc = "0.2.126"
markdown = "0.3"
maud = { version = "0.25", features = ["tide"] }
parking_lot = "0.12.0"
routefinder = "0.5.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
shellexpand = "3.1"
signal-hook = "0.3.14"
snafu = { version = "0.7", features = ["backtraces"] }
strum = "0.24"
strum_macros = "0.25"
surf = "2.3.2"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.4" }
tide = { version = "0.16.0", default-features = false }
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.34"
tracing-distributed = "0.4"
tracing-futures = "0.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.10", features = ["env-filter", "json"] }
url = "2.2.2"

[target.'cfg(not(windows))'.dependencies]
signal-hook-async-std = "0.2.2"

[dev-dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = "0.4.0"
async-tungstenite = { version = "0.22", features = ["async-std-runtime"] }
portpicker = "0.1"
tracing-test = "0.2"
