[package]
name = "tide-disco"
version = "0.5.0"
edition = "2021"
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Discoverability for Tide"
repository = "https://github.com/EspressoSystems/tide-disco"
license-file = "LICENSE"

[[example]]
name = "hello-world"
test = true

[dependencies]
anyhow = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1.74"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
derivative = "2.2"
derive_more = "0.99"
dirs = "5.0.1"
edit-distance = "2.1"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.0.0"
include_dir = "0.7"
lazy_static = "1.4"
libc = "0.2"
markdown = "0.3"
maud = { version = "0.26", features = ["tide"] }
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
prometheus = "0.13"
routefinder = "0.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.7"
serde_json = "1.0"
shellexpand = "3.1"
signal-hook = "0.3.14"
snafu = "0.8"
strum = "0.26"
strum_macros = "0.26"
surf = "2.3.2"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.3.4" }
tide = { version = "0.16.0", default-features = false }
tide-websockets = "0.4.0"
toml = "0.8"
tracing = "0.1.40"
tracing-distributed = "0.4"
tracing-futures = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.0"
versioned-binary-serialization = { git = "https://github.com/EspressoSystems/versioned-binary-serialization.git", tag = "0.1.2" }

[target.'cfg(not(windows))'.dependencies]
signal-hook-async-std = "0.2.2"

[dev-dependencies]
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4.0"
async-tungstenite = { version = "0.25", features = ["async-std-runtime"] }
portpicker = "0.1"
tracing-test = "0.2"
