[package]
name = "tide-disco"
version = "0.9.5"
edition = "2021"
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Discoverability for Tide"
repository = "https://github.com/EspressoSystems/tide-disco"
license-file = "LICENSE"

[features]
testing = ["async-compatibility-layer", "async-tungstenite"]

[[example]]
name = "hello-world"
test = true
required-features = ["testing"]

[[example]]
name = "versions"
test = true
required-features = ["testing"]

[dependencies]
anyhow = "1.0"
async-h1 = "2.3"
async-lock = "3.3"
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
async-trait = "0.1.79"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
derivative = "2.2"
derive_more = "0.99"
dirs = "5.0.1"
edit-distance = "2.1"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
include_dir = "0.7"
itertools = "0.12"
lazy_static = "1.4"
libc = "0.2"
markdown = "0.3"
maud = { version = "0.26", features = ["tide"] }
parking_lot = "0.12"
pin-project = "1.0"
prometheus = { version = "0.13", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
routefinder = "0.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.7"
serde_json = "1.0"
shellexpand = "3.1"
signal-hook = "0.3.14"
snafu = "0.8"
strum = "0.26"
strum_macros = "0.26"
tagged-base64 = "0.4"
tide = { version = "0.16.0", default-features = false }
tide-websockets = "0.4.0"
toml = "0.8"
tracing = "0.1.40"
tracing-distributed = "0.4"
tracing-futures = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.0"
vbs = "0.1"
rand = "0.8"

# Dependencies enabled by feature `testing`
async-compatibility-layer = { version = "1.1", features = [
    "logging-utils",
], optional = true }
async-tungstenite = { version = "0.25", features = [
    "async-std-runtime",
], optional = true }

[target.'cfg(not(windows))'.dependencies]
signal-hook-async-std = "0.2.2"

[dev-dependencies]
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4.0"
async-compatibility-layer = { version = "1.1", features = ["logging-utils"] }
async-tungstenite = { version = "0.25", features = ["async-std-runtime"] }
portpicker = "0.1"
